--- a/q/49854.html
+++ b/q/49854.html
@@ -26,40 +26,46 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>095</td><td>R</td><td>240724T144909Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/274412#274412">int 21h </a></td></tr>
-<tr d-ix="1"><td>090</td><td>Scala</td><td>201227T215300Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/216931#216931">cubic le</a></td></tr>
-<tr d-ix="2"><td>006</td><td>Jelly</td><td>201227T200818Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/216926#216926">caird co</a></td></tr>
-<tr d-ix="3"><td>008</td><td>05AB1E</td><td>200924T122415Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/211589#211589">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>011</td><td>Stax</td><td>200924T102106Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/211584#211584">Razetime</a></td></tr>
-<tr d-ix="5"><td>nan</td><td>Perl</td><td>150512T170113Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/50075#50075">alyx-bre</a></td></tr>
-<tr d-ix="6"><td>013</td><td>CJam</td><td>150508T221519Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49855#49855">Optimize</a></td></tr>
-<tr d-ix="7"><td>075</td><td>Ruby</td><td>150512T010229Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/50041#50041">user1216</a></td></tr>
-<tr d-ix="8"><td>059</td><td>R</td><td>150510T015901Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49913#49913">flodel</a></td></tr>
-<tr d-ix="9"><td>034</td><td>J</td><td>150509T232106Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49903#49903">Eelvex</a></td></tr>
-<tr d-ix="10"><td>085</td><td>JavaScript ES6</td><td>150509T220123Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49900#49900">royhowie</a></td></tr>
-<tr d-ix="11"><td>085</td><td>JavaScript ES6</td><td>150509T092741Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49873#49873">edc65</a></td></tr>
-<tr d-ix="12"><td>058</td><td>Mathematica</td><td>150509T000302Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49860#49860">Martin E</a></td></tr>
-<tr d-ix="13"><td>013</td><td>Pyth</td><td>150509T042531Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49866#49866">orlp</a></td></tr>
-<tr d-ix="14"><td>134</td><td>Javascript ES6</td><td>150509T055658Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49868#49868">nderscor</a></td></tr>
-<tr d-ix="15"><td>077</td><td>Julia</td><td>150509T030434Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49864#49864">Alex A.</a></td></tr>
-<tr d-ix="16"><td>099</td><td>Python 2</td><td>150508T225144Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49857#49857">sirperci</a></td></tr>
-<tr d-ix="17"><td>098</td><td>Haskell</td><td>150508T234652Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49859#49859">nimi</a></td></tr>
+<tr d-ix="0"><td>011</td><td>Japt</td><td>240724T185628Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/274419#274419">Shaggy</a></td></tr>
+<tr d-ix="1"><td>095</td><td>R</td><td>240724T144909Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/274412#274412">int 21h </a></td></tr>
+<tr d-ix="2"><td>090</td><td>Scala</td><td>201227T215300Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/216931#216931">cubic le</a></td></tr>
+<tr d-ix="3"><td>006</td><td>Jelly</td><td>201227T200818Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/216926#216926">caird co</a></td></tr>
+<tr d-ix="4"><td>008</td><td>05AB1E</td><td>200924T122415Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/211589#211589">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>011</td><td>Stax</td><td>200924T102106Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/211584#211584">Razetime</a></td></tr>
+<tr d-ix="6"><td>nan</td><td>Perl</td><td>150512T170113Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/50075#50075">alyx-bre</a></td></tr>
+<tr d-ix="7"><td>013</td><td>CJam</td><td>150508T221519Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49855#49855">Optimize</a></td></tr>
+<tr d-ix="8"><td>075</td><td>Ruby</td><td>150512T010229Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/50041#50041">user1216</a></td></tr>
+<tr d-ix="9"><td>059</td><td>R</td><td>150510T015901Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49913#49913">flodel</a></td></tr>
+<tr d-ix="10"><td>034</td><td>J</td><td>150509T232106Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49903#49903">Eelvex</a></td></tr>
+<tr d-ix="11"><td>085</td><td>JavaScript ES6</td><td>150509T220123Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49900#49900">royhowie</a></td></tr>
+<tr d-ix="12"><td>085</td><td>JavaScript ES6</td><td>150509T092741Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49873#49873">edc65</a></td></tr>
+<tr d-ix="13"><td>058</td><td>Mathematica</td><td>150509T000302Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49860#49860">Martin E</a></td></tr>
+<tr d-ix="14"><td>013</td><td>Pyth</td><td>150509T042531Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49866#49866">orlp</a></td></tr>
+<tr d-ix="15"><td>134</td><td>Javascript ES6</td><td>150509T055658Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49868#49868">nderscor</a></td></tr>
+<tr d-ix="16"><td>077</td><td>Julia</td><td>150509T030434Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49864#49864">Alex A.</a></td></tr>
+<tr d-ix="17"><td>099</td><td>Python 2</td><td>150508T225144Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49857#49857">sirperci</a></td></tr>
+<tr d-ix="18"><td>098</td><td>Haskell</td><td>150508T234652Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49859#49859">nimi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>96</s>  95 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>¸á m¬Íé gAì
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=uOEgbazN6SBnQew&amp;input=IjUgNTYgNTAi" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>96</s>  95 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>a=scan();`+`=sort;range(combn(rep(a,L),L&lt;-sum(a|1),function(x)Reduce(paste0,x[all(+x==+a)]),F))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMHKNAUbXYUYDc3qpaUlaboWN-MTbYuTE_M0NK0TtBNsi_OLSqyLEvPSUzWS83OT8jSKUgs0EnV8NHV8bHSLS3M1EmsMNXXSSvOSSzLz8zQqNINSU0qTUzUKEotLUg10KqITc3I0tCtsbbUTNWM1ddw0NSHW7KzlStNQ0OQyNVUw5YIyFUzNFEwNIPILFkBoAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>I guess I can justify this rather long golf with the quotation from an unknown author: <em>the verbosity is the price for freedom</em> =).</p>
 <p>This solution is indeed independent from any package. Since the permutation function is not provided in the standard R library, I have constructed all possible permutations with the <code>combn</code> function by taking the excess amount of the list elements and filtering out the combinations with the repetitions of the elements. In the combinations that left, the elements get concatenated and minimum and macimum elements are output.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 90 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 90 bytes</h1>
 
 <pre class="lang-scala prettyprint-override"><code>val x=Console.in.readLine.split(&quot; &quot;).permutations.map(_.mkString).toSeq
 print(x.min,x.max)
 </code></pre>
 <p><a href="https://tio.run/##DYrLCsIwEADvfsXSUwqy4NsePEiv3voBsjZrieZls0pA/PYYBgYGJo1kqYTbg0eBPmiegr0DZ2GvE5xjhG/5kIV86oNPwTIajzOTvhjPmKI1ohpoWow8u7eQmLqho6iu6J6DzMZPLUoY@LWINURldMYvqym35Vc6WG@2sIIdHI6wr3R/" rel="nofollow noreferrer" title="Scala – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 6 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 6 bytes</h1>
 <pre><code>Œ!VṢ.ị
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///oJMWwhzsX6T3c3f3/cPujpjX//0eb6iiYmgGxQawOAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -72,7 +78,7 @@ print(x.min,x.max)
     .ị - Take the first and last elements           [56550, 50556]
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>#œJ{¬sθ»
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f9f@ehkr@pDa4rP7Ti0@/9/UwVTMwVTAwA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -89,7 +95,7 @@ print(x.min,x.max)
           # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 11 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 11 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ú∙n90≤╣*.vâ
 </code></pre>
 <p><a href="https://staxlang.xyz/#c=L%7CT%7B%24mc%7CmP%7CMp&amp;i=5+56+50" rel="nofollow noreferrer">Run and debug it</a></p>
@@ -104,13 +110,13 @@ L             put all inputs in a list
           |mp print the maximum element
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>Perl, <s>79</s> 70B (68+2)</h1>
+<div id="pu6" class="pu"><h1>Perl, <s>79</s> 70B (68+2)</h1>
 
 <p><code>use Math::Combinatorics;say for(sort map{join'',@$_}permute@F)[0,-1]</code></p>
 
 <p>Call with <code>echo 13 42 532 3 6|perl -M5.10.0 -an scratch.pl</code>. There's a +2 byte penalty for <code>-an</code>. Shame about the length of the module name...</p>
 </div>
-<div id="pu6" class="pu"><h1>CJam, <s>14</s> 13 bytes</h1>
+<div id="pu7" class="pu"><h1>CJam, <s>14</s> 13 bytes</h1>
 
 <pre><code>qS/e!:s$(N@W=
 </code></pre>
@@ -126,20 +132,20 @@ L             put all inputs in a list
 
 <p><a href="http://cjam.aditsu.net/#code=qS%2Fe!%3As%24(N%40W%3D&amp;input=5%2056%2050" rel="nofollow">Try it online here</a></p>
 </div>
-<div id="pu7" class="pu"><h1>Ruby 75</h1>
+<div id="pu8" class="pu"><h1>Ruby 75</h1>
 <p>Not my 'native' language, but one I thought I'd give a try at... thus this could (possibly) use some golfing tips. Still, not a bad entrant.</p>
 <pre class="lang-ruby prettyprint-override"><code>puts STDIN.read.split(&quot; &quot;).permutation.map{|x|x.join}.sort.values_at(0,-1)
 </code></pre>
 <p>I wouldn't say it is <em>elegant</em> other that everything is built in to the language.  It should be fairly obvious exactly how this works.</p>
 </div>
-<div id="pu8" class="pu"><h2>R, 59 bytes</h2>
+<div id="pu9" class="pu"><h2>R, 59 bytes</h2>
 
 
 
 <pre class="lang-r prettyprint-override"><code>write(range(combinat:::permn(scan(),paste,collapse="")),"")
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h2>J, 34 <sup><s>36</s>, <s>42</s></sup> bytes</h2>
+<div id="pu10" class="pu"><h2>J, 34 <sup><s>36</s>, <s>42</s></sup> bytes</h2>
 
 <p>simple brute force:</p>
 
@@ -154,7 +160,7 @@ h 50 2 1 9
 95021
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>JavaScript (ES6), 85 bytes</h1>
+<div id="pu11" class="pu"><h1>JavaScript (ES6), 85 bytes</h1>
 <pre><code>F=a=&gt;(c=a.split(&quot; &quot;).sort((b,a)=&gt;b+a-(a+b)),`${c.join(&quot;&quot;)}
 ${c.reverse().join(&quot;&quot;)}`)
 </code></pre>
@@ -166,7 +172,7 @@ ${c.reverse().join(&quot;&quot;)}`)
 */
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1>JavaScript (ES6) <s>54 72</s> 85</h1>
+<div id="pu12" class="pu"><h1>JavaScript (ES6) <s>54 72</s> 85</h1>
 
 <p><s>That's easier than it seems. Just sort them lexicographically. The good news is: that's exactly how plain javascript sort works.</s>Well ... no, that's wrong ... still a (more convoluted) lexicograph compare can do the job.</p>
 
@@ -216,7 +222,7 @@ F([52,36,524]
   5252436</p>
 </blockquote>
 </div>
-<div id="pu12" class="pu"><h1>Mathematica, <s>64</s> 58 bytes</h1>
+<div id="pu13" class="pu"><h1>Mathematica, <s>64</s> 58 bytes</h1>
 
 <pre><code>Print/@Sort[""&lt;&gt;#&amp;/@Permutations@StringSplit@#][[{1,-1}]]&amp;
 </code></pre>
@@ -225,12 +231,12 @@ F([52,36,524]
 
 <p>Six bytes saved thanks to alephalpha.</p>
 </div>
-<div id="pu13" class="pu"><h1>Pyth, <strike>14</strike> 13 bytes</h1>
+<div id="pu14" class="pu"><h1>Pyth, <strike>14</strike> 13 bytes</h1>
 <pre><code>hJSmsd.pcz)eJ
 </code></pre>
 <p>Generates all permutations and sorts them, printing the first and last element.</p>
 </div>
-<div id="pu14" class="pu"><h1>Javascript (<em>ES6</em>) 134</h1>
+<div id="pu15" class="pu"><h1>Javascript (<em>ES6</em>) 134</h1>
 
 <p>Sadly, there's no built-in permutation function in JS :(</p>
 
@@ -247,7 +253,7 @@ F([52,36,524]
 </div>
 </p>
 </div>
-<div id="pu15" class="pu"><h1>Julia, 77 bytes</h1>
+<div id="pu16" class="pu"><h1>Julia, 77 bytes</h1>
 
 
 
@@ -271,13 +277,13 @@ end
 
 <p>Suggestions are welcome!</p>
 </div>
-<div id="pu16" class="pu"><h1>Python 2, <s>104</s> 99 bytes</h1>
+<div id="pu17" class="pu"><h1>Python 2, <s>104</s> 99 bytes</h1>
 <p>Yep.</p>
 <pre><code>from itertools import*;z=[''.join(x)for x in permutations(raw_input().split())];print min(z),max(z)
 </code></pre>
 <p>Edit: thanks to xnor for -5 bytes!</p>
 </div>
-<div id="pu17" class="pu"><h1>Haskell, 98 bytes</h1>
+<div id="pu18" class="pu"><h1>Haskell, 98 bytes</h1>
 
 <pre><code>import Data.List
 g=sort.map concat.permutations.words
