--- a/q/49854.html
+++ b/q/49854.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Japt</td><td>240724T185628Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/274419#274419">Shaggy</a></td></tr>
-<tr d-ix="1"><td>095</td><td>R</td><td>240724T144909Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/274412#274412">int 21h </a></td></tr>
+<tr d-ix="0"><td>095</td><td>R</td><td>240724T144909Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/274412#274412">int 21h </a></td></tr>
+<tr d-ix="1"><td>011</td><td>Japt</td><td>240724T185628Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/274419#274419">Shaggy</a></td></tr>
 <tr d-ix="2"><td>090</td><td>Scala</td><td>201227T215300Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/216931#216931">cubic le</a></td></tr>
 <tr d-ix="3"><td>006</td><td>Jelly</td><td>201227T200818Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/216926#216926">caird co</a></td></tr>
 <tr d-ix="4"><td>008</td><td>05AB1E</td><td>200924T122415Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/211589#211589">Kevin Cr</a></td></tr>
@@ -46,17 +46,17 @@
 <tr d-ix="17"><td>099</td><td>Python 2</td><td>150508T225144Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49857#49857">sirperci</a></td></tr>
 <tr d-ix="18"><td>098</td><td>Haskell</td><td>150508T234652Z</td><td><a href="https://codegolf.stackexchange.com/questions/49854/largest-and-smallest-values-from-concatenated-integers/49859#49859">nimi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>¸á m¬Íé gAì
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=uOEgbazN6SBnQew&amp;input=IjUgNTYgNTAi" rel="nofollow noreferrer">Try it</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>96</s>  95 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>96</s>  95 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>a=scan();`+`=sort;range(combn(rep(a,L),L&lt;-sum(a|1),function(x)Reduce(paste0,x[all(+x==+a)]),F))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMHKNAUbXYUYDc3qpaUlaboWN-MTbYuTE_M0NK0TtBNsi_OLSqyLEvPSUzWS83OT8jSKUgs0EnV8NHV8bHSLS3M1EmsMNXXSSvOSSzLz8zQqNINSU0qTUzUKEotLUg10KqITc3I0tCtsbbUTNWM1ddw0NSHW7KzlStNQ0OQyNVUw5YIyFUzNFEwNIPILFkBoAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>I guess I can justify this rather long golf with the quotation from an unknown author: <em>the verbosity is the price for freedom</em> =).</p>
-<p>This solution is indeed independent from any package. Since the permutation function is not provided in the standard R library, I have constructed all possible permutations with the <code>combn</code> function by taking the excess amount of the list elements and filtering out the combinations with the repetitions of the elements. In the combinations that left, the elements get concatenated and minimum and macimum elements are output.</p>
+<p>This solution is indeed independent from any package. Since the permutation function is not provided in the standard R library, I have constructed all possible permutations with the <code>combn</code> function by taking the excess amount of the list elements and filtering out the combinations with the repetitions of the elements. In the combinations that left, the elements get concatenated and minimum and maximum elements are output.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>¸á m¬Íé gAì
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=uOEgbazN6SBnQew&amp;input=IjUgNTYgNTAi" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="http://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 90 bytes</h1>
 
