--- a/q/274389.html
+++ b/q/274389.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>Brachylog</td><td>240724T203657Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274420#274420">DLosc</a></td></tr>
+<tr d-ix="0"><td>015</td><td>Brachylog</td><td>240724T203657Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274420#274420">DLosc</a></td></tr>
 <tr d-ix="1"><td>021</td><td>Haskell + hgl</td><td>240724T135452Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274410#274410">Wheat Wi</a></td></tr>
 <tr d-ix="2"><td>011</td><td>Retina 0.8.2</td><td>240724T173832Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274417#274417">Neil</a></td></tr>
 <tr d-ix="3"><td>085</td><td>Python 3.8 prerelease</td><td>240724T095658Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274399#274399">Jitse</a></td></tr>
@@ -36,27 +36,24 @@
 <tr d-ix="7"><td>009</td><td>QuadR</td><td>240724T085533Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274394#274394">Ad&#225;</a></td></tr>
 <tr d-ix="8"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 16 bytes</h1>
-<pre><code>~c{~jʰ|↺~jʰ↻}c↰|
+<div id="pu0" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, <s>16</s> 15 bytes</h1>
+<pre><code>~c₃↺{h&amp;~j}ʰ↻c↰|
 </code></pre>
-<p><a href="https://tio.run/##SypKTM6ozMlPN/r/vy65ui7r1IaaR227QPSjtt21yY/aNtT8/69kk5@fbwck7JT@RwAA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a> (Times out if the output is longer than 7 characters.)</p>
+<p><a href="https://tio.run/##SypKTM6ozMlPN/r/vy75UVPzo7Zd1RlqdVm1pzY8atud/KhtQ83//0qeEZ4RjhGOSv8jAA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
 <h3>Explanation</h3>
 <p>I wouldn't be surprised if there's a better way to do this.</p>
-<pre><code>~c{~jʰ|↺~jʰ↻}c↰|
-~c                 &quot;Unconcatenate&quot; the input string into some list of substrings
-  {          }     Apply this predicate to the list:
-                    EITHER:
-     ʰ               Take the first element
-   ~j                Assert that it consists of a substring repeated twice,
-                     and return that substring
-      |             OR:
-       ↺             Rotate the first element to the end
-        ~jʰ           Same as above
-           ↻         Rotate the final element back to the beginning
-                   If that predicate succeeded:
-              c     Concatenate the list back together
-               ↰    Call the main predicate again on the result
-                |  Otherwise, return the input unchanged
+<pre><code>~c₃↺{h&amp;~j}ʰ↻c↰|
+~c₃               &quot;Unconcatenate&quot; the input string into three substrings
+   ↺              Rotate the first element to the end
+    {    }ʰ       Apply this predicate to the new first element:
+     h&amp;             Assert that it is nonempty
+       ~j           Assert that it consists of a substring repeated twice,
+                    and return that substring
+           ↻      Rotate the final element back to the beginning
+             c    Concatenate the list back together
+              ↰   Call the main predicate again on the result
+               |  If there was no way to partition the input string that
+                  satisfied the assertions, return the input unchanged
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 21 bytes</h1>
