--- a/q/274342.html
+++ b/q/274342.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>103</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
-<tr d-ix="1"><td>040</td><td>Uiua</td><td>240724T170308Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274416#274416">Marcos G</a></td></tr>
-<tr d-ix="2"><td>073</td><td>GNU sed E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
+<tr d-ix="0"><td>067</td><td>GNU sed E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
+<tr d-ix="1"><td>103</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
+<tr d-ix="2"><td>040</td><td>Uiua</td><td>240724T170308Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274416#274416">Marcos G</a></td></tr>
 <tr d-ix="3"><td>096</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
 <tr d-ix="4"><td>120</td><td>Google Sheets</td><td>240724T111238Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274403#274403">z..</a></td></tr>
 <tr d-ix="5"><td>092</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
@@ -40,7 +40,17 @@
 <tr d-ix="11"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
 <tr d-ix="12"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 103 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">GNU sed</a> <code>-E</code>, 67 bytes</h1>
+<p>The input string and sequence of moves should be separated by a tab. Code contains literal tab characters.</p>
+<pre><code>:a
+s/(.)?\|(.* )&lt;/|\1\2/
+s/\|(.)?(.* )&gt;/\1|\2/
+s/.?\|(.*   )#/|\1/
+ta
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m724ODVlWbSSrqtS7IKlpSVpuhY3na0SuYr1NfQ07WNqNPS0ODVt9GtiDGOM9IGiIBFNe7ConX6MYQ1EVA-mUhmkUp-rJBFiFNTEBXtDMjKLFYAoUaEktbikhlPZBgSUwcAOoggA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 103 bytes</h1>
 
 <pre class="lang-sh prettyprint-override"><code>IFS=\|
 read l r
@@ -48,8 +58,9 @@ for m;case $m {\&lt;)r=$l[-1]$r l=$l[1,-2];;\&gt;)l+=$r[1] r=${r:1};;*)l=$l[1,-2
 &lt;&lt;&lt;$l\|$r
 </code></pre>
 <p><a href="https://tio.run/##VY8xT8MwEIVn/CtOqiXHQCuFETteipCY6dZkcKmrIDmtdDYLcX57OBuqhicPvrvvnd59h34@VbKa317fmzYxdPYIHpCdLgiD@rDBAR9gbLXEhvv9uu44gs/f@nH91CnVGukfGo77ugNCRnyuJ6Xu5YKZmNaa@zZxnGXZfIABLlAxses/A9CzEF2ISdyJlc5aFRmqd71NeSiY2H5hSOR252PBaWqW0pnP0IJJfz5qhRQtxqtT32Q01elK3SAmXpx30YH1vkT7J0PO7CMslST6NzA16EjIJx@Aj1XYbOQwzT8" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
+<p>Takes string on stdin and motions as argv.</p>
 <pre class="lang-sh prettyprint-override"><code>IFS=\|    # set internal field separator for reading string
-read l r  # read string from stdin
+read l r  # read string from stdin, splitting on $IFS into $l and $r
 for m;    # motions as separate arguments
   case $m {
     \&lt;)
@@ -62,7 +73,7 @@ for m;    # motions as separate arguments
 &lt;&lt;&lt;$l\|$r
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 40 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 40 bytes</h1>
 <pre><code>⍜⊙↻⊂@|∧⊃(+-⊸¬=@&gt;|⍜⊙↻↘=@#⊙-⊙1):⊙:⊙▽⊃⊗⊸≠@|
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_2__IiM8PDw8PCMjIyMjIz4iCgoiVGhpcyBpcyBhIHRlc3R8IgoK4o2c4oqZ4oa74oqCQHziiKfiioMoKy3iirjCrD1APnzijZziipnihrvihpg9QCPiipkt4oqZMSk64oqZOuKKmeKWveKKg-KKl-KKuOKJoEB8Cg==" rel="nofollow noreferrer">Try it out!</a></p>
@@ -78,16 +89,6 @@ for m;    # motions as separate arguments
 )             # End loop
 ⍜⊙↻⊂@|        # Insert the cursor back into the string at cursor position
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">GNU sed</a> <code>-E</code>, 73 bytes</h1>
-<p>The input string and sequence of moves should be separated by a tab. Code contains literal tab characters.</p>
-<pre><code>:a
-s/(.)?\|(.* )(&lt;)/|\1\2/
-s/\|(.)?(.* )(&gt;)/\1|\2/
-s/.?\|(.*   )(#)/|\1/
-ta
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m724ODVlWbSSrqtS7IKlpSVpuhY3Pa0SuYr1NfQ07WNqNPS0ODU1bDT1a2IMY4z0geIgMU17iLidpn6MYQ1EXA-uWhmsWp-rJBFiINTcBXtDMjKLFYAoUaEktbikhlPZBgSUwcAOoggA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s></sup> 96 bytes</h1>
 <p><em>-4 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em></p>
