--- a/q/274288.html
+++ b/q/274288.html
@@ -26,12 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>141</td><td>Python</td><td>240722T035101Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274316#274316">Bubbler</a></td></tr>
-<tr d-ix="1"><td>026</td><td>Charcoal</td><td>240720T070451Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274293#274293">Neil</a></td></tr>
-<tr d-ix="2"><td>096</td><td>K ngn/k</td><td>240722T100340Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274321#274321">Bubbler</a></td></tr>
-<tr d-ix="3"><td>058</td><td>JavaScript Node.js</td><td>240722T084413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274319#274319">l4m2</a></td></tr>
+<tr d-ix="0"><td>112</td><td>C gcc</td><td>240724T225036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274423#274423">engineer</a></td></tr>
+<tr d-ix="1"><td>141</td><td>Python</td><td>240722T035101Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274316#274316">Bubbler</a></td></tr>
+<tr d-ix="2"><td>026</td><td>Charcoal</td><td>240720T070451Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274293#274293">Neil</a></td></tr>
+<tr d-ix="3"><td>096</td><td>K ngn/k</td><td>240722T100340Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274321#274321">Bubbler</a></td></tr>
+<tr d-ix="4"><td>058</td><td>JavaScript Node.js</td><td>240722T084413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274319#274319">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 141 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 112 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>double k(double u){int V=1&lt;&lt;14,i=0;double L[V*8],l=1;for(*L=1;i++&lt;u*V-V;L[i]=l-=L[i&gt;V?i-V:0]/(i+V-1));return l;}
+</code></pre>
+<p><a href="https://tio.run/##lVVbb6NGFH7nVxx5ZQkwEAbMbW2ySpWsVJWtVk1rVUqtiOAhngYPaBiSrVL/dncGBsdbR5XKAwzn8p3bd6CwH4vicNjU3UOF4UlXh854JZTDKkXLJZpbJHUXSpPdrcx4bVUpWpQ1081MHMhstuzMlb1aZHdknVZ2Kp6Xq0/EXn101xc6ma1sZBgLhnnHKFSL/eEDoUXVbTAsW755qOvK2V5qb8JdzrffS4QZqc9EFXmQMo3/1eANLkElqZvXP5UdLQxVj7HQtAtTAxN@xS1vgW8xNHnb4g1ck@Jpl1NbAP7AOvInBenISU2hawl97G3xt3zXCFwuvKHIW9w6Euwac8x2hOIWSNkbHn1JCy@EbwkF10FTqAd1UTOGCw45bV8wA9FAyKtKQikDFaiHv9A@iJIEOvz825eb36@@fM1ubiHSWp5zUggsKpJRBSu/e0Kbjrd3Jw5rSOEVWYAc3wLPSSyYO54FgRNYEFkQ7y0N3rlGwLrj7yEefSS060R@FPpB5AeB7wVukkmZGyRxFCMkHqEfudEgdL0kCubRPIqTIEaBJ6RHLKl23Th0URwihDw3QCgUBrETzYMwTBKBnviJd2NLMN/xfM8NE9@de16I3Bs7zvYL7bkmm35O92Mv9YEL0Bjw2seSdOvHLwrhrMOCHFIsp6FL1ku2A1melCxeZ7PRXV6q7X27Bcq/2k/WZ03F3xo5@PSsse/YPtbSsNF7NONM3WBWYCpNyvyh1RWyLd0MuBgjmYBc0dBscXQ/Hhomqiz1SaNPHa8qDYE0dVBQlaDAxFoMAgP@Fie/KqdTwIzV7A86OedLn6cl41squjUmabyFFxuij6lfpnItjHEIZV61eLDc93fZGb1XfoLJ16vb2wl8hMnnqx@ziUDcj8v8S0eHXVZL/LZ@DdTPYsFykCs8DmpYqp4grKP3NcVHalhw/PCpKZ806bRFsgHQifr0zvhfqeC82MJLzTZy1d9Lp5edJCSZmLPHwoJimzMwTfHyPGZ3wlUkuSoNB5Ie@z2WKKBazni90SWA5Jv4nmSZyl5i7HJC9f8Mp7KSa9UfUngaxvX9oo16NfW3qkaFpUL02Mpo@Ce4IpvDIXbCQ@QEB99xk38A" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p>Splits the domain <span class="math-container">\$[1,8]\$</span> across <span class="math-container">\$(8-1)2^{14}=114688\$</span> slices and computes each slice's y-value successively based off of the previous y-values.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 141 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>g=lambda x,p=[1]+[0]*99,I=2,z=0,i=0:x&lt;1and sum(a*(1-x)**~-(i:=i+1)for a in p)or g(x-1,[p[0]-sum(A:=[(z:=(z+w)/I)/(i:=i+1)for w in p])]+A,I+1)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=lZJBjpswGIXVZTjFv6mEg2FsE2NM4kWWnCHKglFIxtIEEAEFsugNeoJusmnv1K57hq77E6YVo2mqdgGGJ7_n7_3w6UvVN09lcf327vsu38PB7UjizCqz4Vtvw7ZzrZ3ZvqwhBVtAnRWH3LVFg7tIcjHWsOXabNxLYtyL15EHN_UEwcUmxnqcDMZuMFbbJUZWGOif2qO7Jltv7czqvGnrAgYlm7vc795zMp9bGGyWZoMxL9pjXmdN7laEOHcIl71BszM7P9nnHPqVYUnvGb4cAV8dnPymPSNmj8yvac8j7R_4-n8ho1MsmhpGL3ghxYBs95CuxuElL9GD5S7d21lO6GiK2v-P8HPb7P3468eDec6Oj7sM3iCLX8hJt-JZsZtkY_IHf8pzy68IPmERn9-tkv69xgvUD1tUbXMCAxtOgQchBRFoCotAUJCBpKAoxFunbJvJPhaoUEWhVKGUoZBMDxKTOlYx57hEoWLqpjGhlVyohYq1jLkUo8hYHDEeR5xzwSTnEZ4RqIWMIq0xUIda5D4GhIEIBYt0yBZCRJzlPqKMY4ZyKHSxlTs2QGFEvP2o9fDJD64lKFPIHk-3F_ChJPCAt7H99TquPwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -107,7 +115,7 @@ def g(x):
 <p><code>E(f,x)</code> evaluates the polynomial <code>f</code> at <code>x</code>. <code>N(p,i)</code> takes the series for <span class="math-container">\$f_i\$</span> and the value of <span class="math-container">\$i+1.5\$</span> to compute the series for <span class="math-container">\$f_{i+1}\$</span>. <code>g(x)</code> finds the appropriate function for the interval that <code>x</code> belongs to, and then evaluates the function at <code>x</code> offset by an appropriate amount.</p>
 <p>I had to read a few papers cited on the Wikipedia page to get the idea, but computing with the idea turned out to be not that complex, yet surprisingly efficient and accurate. I intentionally didn't golf the program hard to keep the intents relatively clear, in the hopes that others can port this without too much problem.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
 <pre><code>≧×⁸φＦ×Ｎφ⊞υ∨‹ιφ⁻⌊υ∕§υ±φιＩ⊟υ
 </code></pre>
 <p><a href="https://tio.run/##JYzNCoMwEITvPkWOG0ivpeBJ2otQfyh9gVRXXTBRslnp26eRzmEO3/DNsNgwbHZNqbF7xUyzf9G8RHiTQzbqZtSky2LagvojqP0usRX3wQD6XLXqhRcQo7oAT2QGOrFRDXlhyE1OHEgmDzpoRKhi7Uf8nkqLs40I@cUo0jll0QfyEe6WI/Tbnr0MU7qmy7H@AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Note that the version shown is only within 0.1% for <code>x</code> up to about <code>6</code>; for more accuracy the <code>⁸</code> could be changed to <code>χ</code> or even <code>φ</code> but it would make the resulting program inordinately slow. Explanation:</p>
@@ -152,14 +160,14 @@ def g(x):
 </code></pre>
 <p>Evaluate the polynomial at <code>x-⌊x⌋</code>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 96 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 96 bytes</h1>
 <pre><code>{E[-0.5+1!x;(1,&amp;20){(E[0.5;x]+E[-0.5;w]%2),w:({z-y%x}[y]\x)%y*|!-#x}/1.5+!_x]}
 E:{{z+y*x}[x]/|y}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJwljEEOgyAURPecosTQgAgKlrSFNaegpDuv4P8id+83Xby3mJnMFlsuZrFBOw5JuunuF9VkLhQlqPpfpr0Kr6Y9ynYYFNAL1g8ogePJzQB9dnTAv1A7y7G1Q+NIG6jziZ2x7eYu7Er29k1+WE8ONpCfxOsHxlIjsg==" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274316/78410">my own Python answer</a>. It could have been a bit shorter if base conversion allowed non-integer bases, and those <code>0.5</code>s hurt too.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=x=&gt;f[x*1e6|0]
 for(i=0;i&lt;9e6;)f[1+i]=f[i]-f[i-1e6]/i++||1
