--- a/q/274389.html
+++ b/q/274389.html
@@ -47,7 +47,7 @@
 <p>...But, I mostly just took <a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274420#comment590899_274389">Jitse's comment about requiring recursion</a> as a challenge.</p>
 <pre><code>{           }ˡ    Left reduce by:
  c                Concatenate the new element to the accumulator,
-  ~c₂             then partition that result into two slices,
+  ~c₂             then partition that result into two possibly-empty slices,
      ᶠo∋          trying the partitions in lexicographic order.
         ~jᵗ       Un-double the last slice,
            c      and concatenate the slices back together.
