--- a/q/93441.html
+++ b/q/93441.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>Uiua</td><td>240724T071051Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/274387#274387">Europe20</a></td></tr>
-<tr d-ix="1"><td>042</td><td>Setanta</td><td>240723T231802Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/274377#274377">bb94</a></td></tr>
+<tr d-ix="0"><td>040</td><td>Setanta</td><td>240723T231802Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/274377#274377">bb94</a></td></tr>
+<tr d-ix="1"><td>014</td><td>Uiua</td><td>240724T071051Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/274387#274387">Europe20</a></td></tr>
 <tr d-ix="2"><td>032</td><td>Swift 5.9</td><td>240314T235804Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/271821#271821">macOSist</a></td></tr>
 <tr d-ix="3"><td>018</td><td>Uiua</td><td>240314T214105Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/271819#271819">Zylviij</a></td></tr>
 <tr d-ix="4"><td>nan</td><td>Pascal</td><td>240314T201502Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/271815#271815">Kai Burg</a></td></tr>
@@ -194,7 +194,12 @@
 <tr d-ix="165"><td>006</td><td>Brainfuck</td><td>160916T094529Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/93456#93456">flawr</a></td></tr>
 <tr d-ix="166"><td>027</td><td>Python 2</td><td>160916T085503Z</td><td><a href="https://codegolf.stackexchange.com/questions/93441/print-all-integers/93443#93443">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__4o2iKOKKgjrCry08MMKxLuKKouKHjC4pMeKHoTIK" rel="nofollow noreferrer">Uiua</a>, 14 characters</h1>
+<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>42</s> 40 bytes</h1>
+<pre><code>i:=0nuair-a 1{scriobh(i)i+=1scriobh(-i)}
+</code></pre>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDIiKmNCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__4o2iKOKKgjrCry08MMKxLuKKouKHjC4pMeKHoTIK" rel="nofollow noreferrer">Uiua</a>, 14 characters</h1>
 <pre><code>⍢(¯-&lt;0±..).1 0
 </code></pre>
 <h2>Explanation</h2>
@@ -206,11 +211,6 @@
      &lt;0±       determines if the number is negative
    ¯-          negate the number, but additionally add one to it if the condition was true
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 42 bytes</h1>
-<pre><code>i:=0nuair-a 1{scriobh(i)scriobh(-i-1)i+=1}
-</code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDQvtWWCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
 <div id="pu2" class="pu"><h1>Swift 5.9, 32 bytes</h1>
 <pre class="lang-swift prettyprint-override"><code>(0...).map{print($0)
