--- a/q/274389.html
+++ b/q/274389.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>Charcoal</td><td>240725T083936Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274432#274432">Neil</a></td></tr>
-<tr d-ix="1"><td>096</td><td>Python 3.8 prerelease</td><td>240724T095658Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274399#274399">Jitse</a></td></tr>
+<tr d-ix="0"><td>082</td><td>Python 3.8 prerelease</td><td>240724T095658Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274399#274399">Jitse</a></td></tr>
+<tr d-ix="1"><td>030</td><td>Charcoal</td><td>240725T083936Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274432#274432">Neil</a></td></tr>
 <tr d-ix="2"><td>105</td><td>Setanta</td><td>240725T071331Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274430#274430">bb94</a></td></tr>
 <tr d-ix="3"><td>029</td><td>Wolfram Language Mathematica</td><td>240724T225458Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274424#274424">att</a></td></tr>
 <tr d-ix="4"><td>017</td><td>sed 4.2.2</td><td>240725T052036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274428#274428">Digital </a></td></tr>
@@ -43,7 +43,14 @@
 <tr d-ix="14"><td>043</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
 <tr d-ix="15"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 30 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 82 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:(n:=len(s))==[s:=s.replace((x:=s[i%n:i%~n])+x,x)for i in range(n**3)]or s
+</code></pre>
+<p><a href="https://tio.run/##XY9fb4IwFMXf@RSlibEVhn/YgyMW46NPvmwJiTMLcyhkWCrtEnzhq7PbFpkZtNxzfvc09IqbyiseLkXdndh7V6aXz68UyYjwiJUZJ5JSxvYyYjKoM1Gmx4yQBty@GPGoGLX8QL3Gb@ipqlGBCo7qlJ8zwieTkB6Ayc50uPDRh4@qH6Uzl1QQqepAirJQQAX8aEZp5CCb1DFmUsN9ZAAHCkHGeEx9RO4xSuFMnUlkHoZOuqOZqAuuiO4wpoO@TtEOY/QUI4wd3FjVaPmob72@gXHdtXVQHexNvam1UB089@C1XgsNFn9gYVDbtha0YF7zDNbFAqMcrPJMDUxZdty9nXNLrHRwsk02ycYyrQFtH5lFST9HogeZvyxn4TOs/kbGAg@CwNXbYqgDWt9RoKfdVd8u7B4OzsGrqqpi@MS2swJhYGwa/@AV6PU6UFC/" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>-14 bytes thanks to xnor</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 30 bytes</h1>
 <pre><code>Ｗ⌈ΦＥθ⌈ΦＥλ✂θμλ¹№θ×²μκ≔⪫⪪θ×²ιιθθ
 </code></pre>
 <p><a href="https://tio.run/##bUzLCsIwELz7FXvcQDzotaUgggehINQfCCHYxU3aJq0KId8ek6PgwAzMg9Gj8npSnPN7JDaAvfqQ3SxeiFfji51xkfAnZQkDkza1thKKPQgh4Txtbq3ZnawJeCylqJDwLAqnEOjh8DqRw2Fm@p1S3VHhIprdzVN9Ek3ObYypa2NKXd6/@As" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -56,12 +63,6 @@
 <pre><code>θ
 </code></pre>
 <p>Output the finally reduced string.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 96 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda s:[r:=range((l:=len(s))*l)]+[s:=s.replace((x:=s[i%l:j%l])+x,x)for i in r for j in r]and s
-</code></pre>
-<p><a href="https://tio.run/##XY9fb4IwFMXf@RSliZEOhv/24IjF@OiTL1tC4szCFAVXobZdgi98dXbbIjODlnvO79yGXn5TeVXO5ly0R/rRsvTydUiRjLYioiItT5nnsYiyrPQkIU@M7PytjKgMRcZZuoe0BrctBiw6D9iO@HVQk2MlUIGKEgmk5dnIXVoekGxNVvIAfQao@lE6uqTck0qEkrNCAeXwszEhkYNsp26jpqu/nQzhQMG9IR6SAHn3NkLgjMgkMg9FR51oxkVRKk8nlOrGQHeRFmP0HCOMHVxbVWv5qG@dvoFx3aV1UB3sj/yRtVAdPPHhtV4LDaZ/YGpQ0zQWNGDe8gzWxQKjHKzyTPVMWbbfvJ9yS6x0cLJOVsnKMq0BrR@ZRUk3R6IHmbzOx7MXWN2NjAUehqGrt8VQe7S8o1BPu6m@Xdgd7J2DF1VVxfCJbbIAYWBsgn/wCvR67SmoXw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 105 bytes</h1>
 <pre><code>gniomh(s){le t idir(0,fad@s)le j idir(1,fad@s+1)le i idir(0,j){t=cuid@s(i,j)s=athchuir@s(t+t,t)}toradh s}
@@ -196,11 +197,11 @@ $1
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=XdHBSsNAEAZgvPoU3fWyS9JtUj1UbFJyLAhFaGAPOVkSIyoBN8UWMS_iJQo-gU-jT-PMrrOmktnN_N8QyCavb4_9e5V8bNtqPPuKCmHk81N9e18KwxJhErO9FlyoQBZFzENudxOGaylldGFe3HPfR5-V4Fd5BpVnl1weQ-TyZDROR5xj2FHaufg_733eW2BsQQIdSjAJJkTQIcUBXGTYOpwOcfrLXdcRdhbWdQn1QGh79LYu24G35JtVflOTuoCslzrTGTkmy8tDJ9b-3NodPD6fRadnUP6NLdiZUorhohF0A178sXJfaNXcMVh-4DMO5006b5qUZhC5-3d97-4_" rel="noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 10 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="noreferrer">Japt</a>, 10 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="noreferrer">bytes</a></h1>
 <p>I didn't understand the spec <em>at all</em> so this is based on the worked example &amp; test cases.</p>
 <pre><code>e&quot;(.+)%1&quot;Ï
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ZSIoLispJTEizw&amp;input=WyJRVUFRVUFVQUwiLCIiLCJ4IiwieHgiLCJ4eSIsIiEhPyIsIisvKy8iLCIxKzErMSIsIjErMisxIiwifn5%2bIiwiVGhlVGhlbSIsInRoZXRoZW0iLCJjT1VnaCIsIlhJWEFYQSIsIklYSVhBWEEiLCJYeCIsIjE5ODAzNDAzNCIsIi4uLiEuLi4hIiwiLi4uIS4uLj8iLCJPb2shT29rPyIsIjxvPjxvbz4iXS1tUg" rel="nofollow noreferrer">Try it</a> (includes all test cases)</p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ZSIoLispJTEizw&amp;input=WyJRVUFRVUFVQUwiLCIiLCJ4IiwieHgiLCJ4eSIsIiEhPyIsIisvKy8iLCIxKzErMSIsIjErMisxIiwifn5%2bIiwiVGhlVGhlbSIsInRoZXRoZW0iLCJjT1VnaCIsIlhJWEFYQSIsIklYSVhBWEEiLCJYeCIsIjE5ODAzNDAzNCIsIi4uLiEuLi4hIiwiLi4uIS4uLj8iLCJPb2shT29rPyIsIjxvPjxvbz4iXS1tUg" rel="noreferrer">Try it</a> (includes all test cases)</p>
 </div>
 <div id="pu14" class="pu"><h1>JavaScript (ES6), 43 bytes</h1>
 <p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/76323/l4m2">@l4m2</a></em></p>
