--- a/q/274358.html
+++ b/q/274358.html
@@ -26,12 +26,58 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>020</td><td>05AB1E</td><td>240724T080558Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274390#274390">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>014</td><td>Nekomata + e</td><td>240724T030317Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274380#274380">alephalp</a></td></tr>
-<tr d-ix="2"><td>226</td><td>Elisp</td><td>240723T150252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274359#274359">Samuel J</a></td></tr>
-<tr d-ix="3"><td>079</td><td>JavaScript Node.js</td><td>240723T200514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274367#274367">l4m2</a></td></tr>
+<tr d-ix="0"><td>026</td><td>Charcoal</td><td>240725T125118Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274434#274434">Neil</a></td></tr>
+<tr d-ix="1"><td>020</td><td>05AB1E</td><td>240724T080558Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274390#274390">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>014</td><td>Nekomata + e</td><td>240724T030317Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274380#274380">alephalp</a></td></tr>
+<tr d-ix="3"><td>226</td><td>Elisp</td><td>240723T150252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274359#274359">Samuel J</a></td></tr>
+<tr d-ix="4"><td>079</td><td>JavaScript Node.js</td><td>240723T200514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274358/double-dequer-sort/274367#274367">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 20 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
+<pre><code>Ｆ³«≔⮌θθＦＬθ¿⁼§θκ⌈θ§≔θκ⁰»¬⌈θ
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z8tv0hBw1hToZqL07G4ODM9TyMotSy1qDhVo1BTR6FQ05qLE6zEJzUvvSQDKKipkJmmoOFaWJqYU6zhWOKZl5JaoVGoo5ANVO6bWJGZW5oLUqWpADEOWYWOggHQvFqugKLMvBINv/wSDWQN1v//R0eb6pgAoamOMRib6RjpmMXG/tctywEA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> for double dequer, nothing if not. Explanation: Assumes the correctness of @l4m2's polynomial time algorithm.</p>
+<pre><code>Ｆ³«
+</code></pre>
+<p>Repeat thrice.</p>
+<pre><code>≔⮌θθ
+</code></pre>
+<p>Reverse the array.</p>
+<pre><code>ＦＬθ
+</code></pre>
+<p>Loop over its indices.</p>
+<pre><code>¿⁼§θκ⌈θ
+</code></pre>
+<p>If this element is the maximum of those remaining, then...</p>
+<pre><code>§≔θκ⁰
+</code></pre>
+<p>... replace it with <code>0</code>.</p>
+<pre><code>»¬⌈θ
+</code></pre>
+<p>If the array only contains <code>0</code>s then the original array was double dequer.</p>
+<p>Unfortunately <code>MapCommand</code> only updates the array at the end of the map, otherwise you could write something like this for 20 bytes:</p>
+<pre><code>Ｆ³«≔⮌θθＵＭθ∧⁻κ⌈θκ»¬⌈θ
+</code></pre>
+<p>29 bytes to support all integers:</p>
+<pre><code>Ｆ³«≔⮌θθＦ⮌Ｅθλ¿⁼§θκ⌊θ≔Φθ⁻μκθ»¬θ
+</code></pre>
+<p><a href="https://tio.run/##NY07D4IwFIVn@BUdb5O6iLAwMWjigDGuhKHBog192AfExPjba0swJ3c55zvnDk9qB01FCKO2CAqMPnnWOMcfCm5sYdYxMJggg@s8W5G/29IXGIIExhjxEcHRzFQ4aPxZ3dk7RVPstVxxOcu4EbFt98SFZzYRMZ0dyIRuP7751XLl4aJ96tQhdF1JDlElKdaryJ5UfR92i/gB" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> for double dequer, nothing if not. Explanation: Assumes the correctness of @l4m2's polynomial time algorithm.</p>
+<pre><code>Ｆ³«
+</code></pre>
+<p>Repeat thrice.</p>
+<pre><code>≔⮌θθＦ⮌Ｅθλ
+</code></pre>
+<p>Reverse the array and then loop over its indices in reverse. (This is because I want to be able to remove elements as I go.)</p>
+<pre><code>¿⁼§θκ⌊θ
+</code></pre>
+<p>If this element is the minimum of those remaining, then...</p>
+<pre><code>≔Φθ⁻μκθ
+</code></pre>
+<p>... remove that element.</p>
+<pre><code>»¬θ
+</code></pre>
+<p>If the array is now empty then the original input was double dequer.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 20 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>&quot;.œειćRíì˜&quot;D…D{QJ.Và
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274380/52210"><em>@alephalpha</em>'s Nekomata answer</a>, so make sure to upvote that answer as well!</p>
@@ -60,10 +106,10 @@
                     Q #   Check if the two are equal (aka it was already sorted)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 14 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="noreferrer">Nekomata</a> + <code>-e</code>, 14 bytes</h1>
 <pre><code>o$2ᵑ{Jĭᵃjᵈ↔,}=
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FtvzVYwebp1Y7XVk7cOtzVkPt3Y8apuiU2u7pDgpuRiqZsHN5dGGsVzRhjpGOsY6JkCWkY4JkAUSA9FGYJahgQ4MAXlAdUBxUx1DHTOoKlMg3wys0hQoZwLkG4OxGUgcbDrQJKhOkD6gXWC1IL4hWMYcKG6GwrfQsdRBVg9xLwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FtvzVYwebp1Y7XVk7cOtzVkPt3Y8apuiU2u7pDgpuRiqZsHN5dGGsVzRhjpGOsY6JkCWkY4JkAUSA9FGYJahgQ4MAXlAdUBxUx1DHTOoKlMg3wys0hQoZwLkG4OxGUgcbDrQJKhOkD6gXWC1IL4hWMYcKG6GwrfQsdRBVg9xLwA" rel="noreferrer">Attempt This Online!</a></p>
 <pre><code>o$2ᵑ{Jĭᵃjᵈ↔,}=
 o               Sort the input
  $              Push the input again
@@ -81,7 +127,7 @@ o               Sort the input
              =  Check equality (comparing to the sorted input)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Elisp 226 bytes</h1>
+<div id="pu3" class="pu"><h1>Elisp 226 bytes</h1>
 <pre><code>(defun d(i r)(let((o(list(pop i))))(while(and i o)(let((n(pop i)))(if(&lt;= n(car o))(setq o(cons n o))(if(&gt;= n(car(last o)))(setq o(append o(list n)))(if r(progn(setq o(cons n o))(if(not i)(setq o(d o nil))))(setq o nil))))))o))
 </code></pre>
 <p><a href="https://tio.run/##hVLLboMwELzzFaNIVdeHSCUB0kptv6QXC0xqybFd7KifTxcIKVVNYuEDO48d26tOsg5bo4PvyXfuaNFTo9qzRUManSCjIpEjZkTyzkMLXvT9qY0iaRtouAvJXnHSLb2@wVItO4YFBRW/4Kh2NsCOFWa8XxhkZIhD8cqT3iu2nrrCTo7opoBpM@sit54x1sJqI349518hWJD1UzV2Z7WtZVABj5Th36JcJKvYYY8iiRWM7LCie8L8JXH2ZG2JHNWqd8mMasW/ZH3BjP24q4G5kp8zriYY@vP5UvhcE1k2XWArTbh5g2OqwTVPd2T8wB2ru5xnvOBOur/5GjcOD8nFKwvQSYUgjwqbh/BhN@BJYQJPxVKwONUtheh/AA" rel="nofollow noreferrer">Try it online!</a></p>
@@ -113,7 +159,7 @@ output
   )
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([c,...x],i,...z)=&gt;c?f(x,i,...z,c)|f(x,i,c,...z):i?!z.some(t=&gt;i&gt;(i=t)):f(z,1)
 </code></pre>
